# cookiecutter-hypermodern-python

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .pre-commit-hook  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: constraints.txt  release.yml  test.yml  tests.yml
